--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
   command = "npm install && ls node_modules && npm run build"
   publish = "dist"
-  environment = { NODE_VERSION = "16" }
+  environment = { 
+    NODE_VERSION = "16",
+    RANDOM_NUMBER = "$(date +%s)" # Genera un numero casuale
+  }
 
 [functions]
   directory = "netlify/functions"
