--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   command = "npm install && ls node_modules && npm run build"
   publish = "dist"
-  environment = { 
-    NODE_VERSION = "16",
-    RANDOM_NUMBER = "$(date +%s)" # Genera un numero casuale
-  }
+  environment = { NODE_VERSION = "16" }
 
 [functions]
   directory = "netlify/functions"
