--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.0",
+    "copy-webpack-plugin": "^7.0.0"
   }
 }
