--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install && ls node_modules && npm run build"
+  command = "npm run build"
   publish = "dist"
   environment = { NODE_VERSION = "16" }
 
